--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ main{
   justify-content: center;
   align-items: center;
   padding: 50px 20px;
+  margin: 70px 0;
 
 }
 
@@ -76,3 +77,55 @@ header p{
 .prep-list li:last-child {
     margin-bottom: 0;
 }
+
+.ingredients-title, .instructions-title, .nutrition-title{
+    font-family: 'Young Serif', sans-serif;
+    color: var(--text-brown);
+    font-size: 1.7rem;
+}
+
+.ingredients-list li, .instructions-list li{
+    margin-bottom: 12px;
+}
+
+hr.divider{
+    border: none;
+    height: 1px;
+    width: 100%;
+    background-color: var(--primary-color);
+    margin: 30px 0;
+}
+
+.nutrition-table {
+    border-collapse: collapse;
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  
+  .nutrition-table td {
+    border-bottom: 1px solid var(--primary-color);
+    padding: 15px 10px; 
+  }
+
+  .nutrition-table .nutrient {
+    text-align: left;
+    padding-left: 30px;
+  }
+
+  .nutrition-table .value {
+    text-align: left;
+    color: var(--text-brown);
+    font-weight: 600;
+    padding-left: 200px;
+  }
+
+  .attribution{
+    text-align: center;
+    color: var(--text-grey-brown);
+    font-size: 0.8rem;
+  }
+
+  .attribution a{
+    text-decoration: none;
+    color: var(--text-grey-brown);
+  }
